Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!


* Verilator 3.883 devel


* Verilator 3.882 2016-03-01

****  Internal Verilation-time performance enhancements, bug1021. [Johan Bjork]

****  Support inlining interfaces, bug1018. [Johan Bjork]

****  Support SV strings to readmemh, bug1040. [Stefan Wallentowitz]

****  Fix unrolling complicated for-loop bounds, bug677. [Johan Bjork]

****  Fix stats file containing multiple unroll entries, bug1020. [Johan Bjork]

****  Fix using short parameter names on negative params, bug1022. [Duraid Madina]

****  Fix read-after-free error, bug1031. [Johan Bjork]

****  Fix elaboration-time display warnings, bug1032. [Johan Bjork]

****  Fix crash on very deep function trees, bug1028. [Jonathan Kimmitt]

****  Fix slicing mix of big and little-endian, bug1033. [Geoff Barrett]

****  Fix pattern assignment width propagation, bug1037. [Johan Bjork]


* Verilator 3.880 2015-12-19

***   Support display %u, %v, %p, %z, bug989. [Johan Bjork]

****  Fix real parameters causing bad module names, bug992. [Johan Bjork]

****  Fix size-changing cast on packed struct, bug993. [Johan Bjork]

****  Fix function calls on arrayed interface, bug994. [Johan Bjork]

****  Fix arrayed interfaces, bug879, bug1001. [Todd Strader]

****  Fix constant function assigned to packed structs, bug997. [Johan Bjork]

****  Fix interface inside generate, bug998. [Johan Bjork]

****  Fix $signed casts under generates, bug999. [Clifford Wolf]

****  Fix genvar constant propagation, bug1003. [Johan Bjork]

****  Fix parameter constant propagation from package, bug1004. [Johan Bjork]

****  Fix array slicing of non-const indexes, bug1006. [Johan Bjork]

****  Fix dotted generated array error, bug1005. [Jeff Bush, Johan Bjork]

****  Fix error instead of warning on large concat, msg1768. [Paul Rolfe]
