@@ -90,6 +90,7 @@ private:
     // Default: Just iterate
     virtual void visit(AstVar*, AstNUser*) {}
     virtual void visit(AstTypedef*, AstNUser*) {}
+    virtual void visit(AstParamTypeDType*, AstNUser*) {}
     virtual void visit(AstNode* nodep, AstNUser*) {
 	nodeHashIterate(nodep);
     }
