@@ -10,9 +10,9 @@ if (!$::Driver) { use FindBin; exec("$FindBin::Bin/bootstrap.pl", @ARGV, $0); di
 compile (
     );
 
-execute (
-    check_finished=>1,
-    );
+#execute (
+#    check_finished=>1,
+#    );
 
 ok(1);
 1;
